added new files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
 
 <body>
@@ -61,13 +62,19 @@
 
             </div>
 
-            <div class="exchange-rate">1 DKK = .2 AUD</div>
+            
             <button>Get Exchange Rate</button>
+            <div class="exchange-rate">1 DKK = .2 AUD</div>
 
         </form>
     </div>
 
 
 </body>
+
+<!-- script with array of supported country codes-->
+<script src="js/country-list.js"></script>
+<!-- script -->
+<script src="js/script.js"></script>
 
 </html>
