refined code, and fixed bugs

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             
             <button>Get Exchange Rate</button>
-            <div class="exchange-rate">1 DKK = .2 AUD</div>
+            <div class="exchange-rate">Getting exchange rate...</div>
 
         </form>
     </div>
